variables.Variables.scala.error
Erreur de compilation :
Variables:9: error: not found: value reculer
reculer(nbPas)
^Variables:10: error: not found: value poserBiscuit
poserBiscuit() 
^