variables.Variables.scala.code
var nbPas:Int = 0
while(!estSurBiscuit()){
  avance()
  nbPas += 1
  if (estSurBiscuit()){
    prendBiscuit()
  }
}
reculer(nbPas)
poserBiscuit()